--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
 
 /*REMOVE THIS*/
-* {
+/* {
     border: 0.05px rgb(212, 10, 10) dashed;
 }
+
 
 /*Border box*/
 
@@ -56,6 +57,10 @@ html {
     color:black;
 }
 
+.red{
+    color:red;
+}
+
 .nodecor{
     text-decoration: none;
 }
@@ -64,9 +69,6 @@ html {
     text-align:center;
 }
 
-.bgGray{
-
-}
 
 /* Float fix */
 
@@ -83,17 +85,27 @@ html {
 
 h1{
     font-size:26px;
+    letter-spacing:1px;
+    font-weight:900;
 }
 
 h2{
     font-size:22px;
+    letter-spacing:1px;
+    font-weight:900;
 }
 
 h3{
     font-size:18px;
 }
 
+h4{
+    font-size:14px;
+}
 
+h5{
+    font-size:12px;
+}
 /*Containers*/
 
 .container{
@@ -113,6 +125,8 @@ h3{
     max-width:100%;
     height:auto;
 }
+
+
 
 /*STYLING*/
 
@@ -182,21 +196,57 @@ main > h3{
     margin-top:50px;
 }
 
-.wide article, main aside{
-    background-color:#eeeded
+main article, main aside{
+    background-color:#eeeded;
 }
 
-/*Grid*/
+main article h4{
+    margin-bottom:0;
+}
 
-.wide{
-    width: calc(100% / 3 * 2);
+main article h5{
+    margin-top:5px;
+}
+
+main article p{
+    font-size:12px;
+    line-height:1.5;
+    margin: 0 20px;
+}
+
+main .subcontainer{
+    padding: 15px 0 50px;
+}
+
+aside p{
+    font-size:12px;
+    line-height:1.5;
+    margin: 20px 20px;
+
+}
+
+main article a{
+    display:block;
+    width: 100%;
+    text-align:center;
+    font-size:8px;
+    font-weight:bold;
+    margin: 5px 0 10px;
+}
+
+/*GridA*/
+
+.gridA{
+    width: calc(100% / 3 * 2 - 8px );
     float:left;
-    display: grid;    
-    grid-template-columns: 50% 50%;
+    display: grid;
+    grid-template-columns:1fr 1fr;
     grid-template-rows: auto;
-    grid-template-areas: 
+    grid-template-areas:
         "first second"
-        "third third"
+        "third third";
+    grid-gap:25px;
+
 }
 
 .gridItemA{
@@ -213,8 +263,41 @@ main > h3{
 
 /*About*/
 
-.thin{
-    width: calc(100% / 3);
-    float:left;
-    
+.about{
+    width: calc(100% / 3 - 17px);
+    float:right;
 }
+
+/*Related*/
+
+.related{
+    background-color:#eeeded;
+    padding: 25px 0 25px;
+}
+
+.related article{
+    background-color:white;
+}
+
+.related h3{
+    margin-top:10px;
+}
+
+/*Grid B*/
+
+.gridB{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows:auto;
+    grid-gap:25px;
+    padding: 5px auto 5px;
+}
+
+
+
+
+
+
+
+
+
