--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ form input{
     width:60%;
     height:40px;
     border:none;
+    font-family: 'Noto Serif', serif;
 }
 
 input::placeholder{
@@ -393,9 +394,7 @@ form button{
 /* Media responsive CSS */
 
 @media screen and (max-width:900px){
-    /* {
-        border: 0.05px rgb(212, 10, 10) dashed;
-    }
+
 
     /*HEADER*/
 
@@ -451,6 +450,11 @@ form button{
         max-width: calc(100%);
         float:none;
         background-color:#d4d4d4
+
+    }
+
+    .about p{
+        padding-bottom:20px;
     }
 
     .gridB{
@@ -508,6 +512,77 @@ form button{
     }
 
 }
+
+
+@media screen and (max-width:600px){
+    {
+        border: 0.05px rgb(212, 10, 10) dashed;
+    }
+
+    header ul{
+        flex-direction:column;
+        text-align:center;
+    }
+
+    header li,  header a {
+        margin: 10px 0 5px;
+    }
+
+    h1{
+        font-size:18px;
+    }
+
+    h2{
+        font-size:18px;
+    }
+
+    p{
+        font-size:12px;
+    }
+
+    .gridA{
+        grid-template-areas:
+            "first first"
+            "second second"
+            "third third";
+    }
+
+    .about{
+        width:100%;
+        padding-bottom:10px;
+    }
+
+    .gridB{
+        grid-template-columns: 1fr;
+    }
+
+    .gridC{
+        grid-template-areas:
+            "nav nav"
+            "div div"
+            "form form";
+    }
+
+    form button, form input{
+        display:block;
+        width:80%;
+        margin: 0 auto;
+
+    }
+
+    i{
+        font-size:20px;
+    }
+
+    .lower span{
+        font-size:20px;
+    }
+
+
+
+}
+
+
 
 
 
